# Gimmel

./: .gitmodules  Gimmel.md  README.md  gimmel.md  readme.md
Test/: .gitignore
TestBiquad/: .gitignore
TestBiquad/python/: graph.py
TestBiquad/source/: biquadWrapper.cpp
TestBiquad/vsStudio/: TestBiquad.sln  biquadWrapper.vcxproj  biquadWrapper.vcxproj.filters  graph.py
TestBiquad/vsStudio/Debug/: app_old.py  biquadWrapper.cp312-win_amd64.pyd  biquadWrapper.exp  biquadWrapper.lib  biquadWrapper.pyd
docs/: Gimmel.md  README.md  biquad.md  chorus.md  compressor.md  delay.md  detune.md  filter.md  gimmel.md  oscillator.md  phaser.md  reverb.md  saturation.md  tremolo.md
include/: Biquad.hpp  Chorus.hpp  Compressor.hpp  Delay.hpp  Detune.hpp  Gimmel.hpp  Phaser.hpp  Reverb.hpp  Saturation.hpp  Tremolo.hpp  all.hpp  biquad.hpp  chorus.hpp  compressor.hpp  delay.hpp  detune.hpp  filter.hpp  gimmel.hpp  oscillator.hpp  phaser.hpp  reverb.hpp  saturation.hpp  tremolo.hpp  utility.hpp
include/amplitude-domain/: Compressor.hpp  Limiter.hpp  Saturation.hpp
include/modulation/: Chorus.hpp  Detune.hpp  Phaser.hpp  Tremolo.hpp
include/time-domain/: Delay.hpp  Reverb.hpp
test/: JaffMalloc.hpp  test.cpp  wav.h
test/TestBiquad/: CMakeLists.txt
test/TestBiquad/python/: graph.pyproj
test/TestBiquad/vsStudio/: TestBiquad.sln  setup.py
test/TestBiquad/vsStudio/biquadWrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
